--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./bin/server.js"
+    "start": "node src/routes/index.js"
   },
   "keywords": [],
   "author": "",
